--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -2,7 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Values.fullname }}
-  labels: {{ .Values.selectorLabels }}
+  labels:
+    app: {{ .Values.selectorLabels }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
